--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -124,3 +124,10 @@ img{
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
 }
+
+.contact-info {
+  text-align: center;
+  padding: 20px;
+  color: rgb(64, 140, 227);
+  font-size: 20px;
+}
